--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
       <div class = "container">
-        <img src = "img.jpg" alt = "your name">
+        <img src = "img.webp" alt = "your name">
         <h1>Saloni Kushwaha</h1>
          </div>
     </header>
